Fixed issue of slide text could be seen on next slide due to overflow

--- a/src/sass/flexible-content-blocks/_hero.scss
+++ b/src/sass/flexible-content-blocks/_hero.scss
@@ -65,6 +65,7 @@
 
   & h1 {
     color: $white;
+    overflow: hidden;
 
     @include max-screen(389px) {
       font-size: 1.9rem;
